some files added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src//assets/favicon/favicon_3.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon/favicon_3.png" />
+    <meta name="google-site-verification" content="NKMwR3Xlu2qEd6w-Myb_aWWLeH6VVL9qeCC0dTmZh2g" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chinmay's Portfolio</title>
   </head>
